feat: Implemented mobile responsiveness for map and chat

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
 
         <div id="map-container">
             <div id="map"></div>
+            <button id="chat-toggle-btn" class="chat-toggle-btn">💬 Sohbeti Aç</button>
 
             <!-- Chat Section -->
             <div id="chat-container" class="chat-container">
